# lightkurve-api

./: .gitignore  LICENSE  README.md  __info__.py  generate_test_images.py  hatch.toml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yaml
src/lkutils/: __info__.py  __init__.py  conversions.py
tests/: test_conversion.py
