[metadata]
name = lightkurve-api
description = wrapper project for exposing lightkurve over HTTP requests
author = dabi-ngin
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages =
    lkutils
install_requires =
    annotated-types>=0.6.0
    anyio>= 4.3.0
    astropy>= 6.0.0
    astropy-iers-data>= 0.2024.3.4.0.30.17
    astroquery>= 0.4.7
    autograd>= 1.6.2
    beautifulsoup4>= 4.12.3
    bokeh>= 3.3.4
    certifi>= 2024.2.2
    charset-normalizer>= 3.3.2
    click>= 8.1.7
    contourpy>= 1.2.0
    cycler>= 0.12.1
    fastapi>= 0.110.0
    fbpca>= 1.0
    fonttools>= 4.49.0
    future>= 1.0.0
    h11>= 0.14.0
    html5lib>=1.1
    httptools>=0.6.1
    idna>=3.6
    importlib_metadata>= 7.0.2
    jaraco.classes>= 3.3.1
    Jinja2>=3.1.3
    joblib>=1.3.2
    keyring>=24.3.1
    kiwisolver>=1.4.5
    lightkurve>=2.4.2
    MarkupSafe>=2.1.5
    matplotlib>=3.8.3
    memoization>=0.4.0
    more-itertools>=10.2.0
    numpy>=1.26.4
    oktopus>=0.1.2
    packaging>=24.0
    pandas>=2.2.1
    patsy>=0.5.6
    pillow>=10.2.0
    pydantic>=2.6.3
    pydantic_core>=2.16.3
    pyerfa>=2.0.1.1
    pyparsing>=3.1.2
    python-dateutil>=2.9.0.post0
    python-dotenv>=1.0.1
    pytz>=2024.1
    pyvo>=1.5.1
    PyYAML>=6.0.1
    requests>=2.31.0
    scikit-learn>=1.4.1.post1
    scipy>=1.12.0
    six>=1.16.0
    sniffio>=1.3.1
    soupsieve>=2.5
    starlette>=0.36.3
    threadpoolctl>=3.3.0
    tornado>=6.4
    tqdm>=4.66.2
    typing_extensions>=4.10.0
    tzdata>=2024.1
    uncertainties>=3.1.7
    urllib3>=2.2.1
    uvicorn>=0.28.0
    uvloop>=0.19.0
    watchfiles>=0.21.0
    webencodings>=0.5.1
    websockets>=12.0
    xyzservices>=2023.10.1
    zipp>=3.17.0

python_requires = >=3.6
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    setuptools>=42.0

[options.package_data]
lightkurve = py.typed

[flake8]
max-line-length = 160